--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0"
   }
